--- a/About.html
+++ b/About.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">    <!--Calling CSS-->
+        <meta charset="utf-8">  <!--optional-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--For mobile devices-->
         <TITLE> About Us </TITLE>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"rel="stylesheet"/>
-        <link rel = "icon" href = "https://83yeig.dm.files.1drv.com/y4mvdHbBjz5REN0PlHDpU1864eYyQiu3g-fRjVbRyO_ULstdwR3Xh_TSIPpzIfosNLhhFRpiHYsDuJ6n7HetXggDekNlrAjkf61Ie3ReHzLUOkPiLMqqlj9_38bBKInaRzZ3XOc-jItp5Qya0KPOeby9LQ819O0VG-u61vp-Bzx9M8dVKIdUcJhOtx-NZ3p8Zg_CPQMdkQNgL3eXezwHsTaSw?width=256&height=195&cropmode=none"  type = "image/x-icon">  
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"rel="stylesheet"/>   <!--Custom Font-->
+        <link rel = "icon" href = ""  type = "image/x-icon">    <!--Tab icon--> 
 </head>
 <body>
     <header id="main-header">
@@ -14,10 +14,10 @@
             <h1>JetMeteor</h1>
         </div>
     </header>
-    <nav id="navbar">
+    <nav id="navbar">   <!--navigation bar code-->
         <div class="container">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>  <!--different html pages are linked here e.g. index.html is linked to home button-->
                 <li><a class="active" href="About.html">About</a></li>
                 <li><a href="Contact.html">Contact</a></li>
                 <li><a href="#">Services</a></li>
@@ -28,7 +28,7 @@
         <p><b>Ok there is nothing Us this site made by and maintained Pranav Dalvi aka JetMeteor. I made this site to understand the core concepts of HTML and CSS. If you found any bugs or problems help will be appreciated you can contact me more details on contact us tab </b></p>
         
     </div>
-    <footer id="about-main-footer">
+    <footer id="about-main-footer"> <!--Footer-->
         <p>Copyright &copy; 2020 JetMeteor</p>
     </footer>
 </body>
