--- a/Contact.html
+++ b/Contact.html
@@ -6,15 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <TITLE> Contact Us </TITLE>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"rel="stylesheet"/>
-        <link rel = "icon" href = "https://83yeig.dm.files.1drv.com/y4mvdHbBjz5REN0PlHDpU1864eYyQiu3g-fRjVbRyO_ULstdwR3Xh_TSIPpzIfosNLhhFRpiHYsDuJ6n7HetXggDekNlrAjkf61Ie3ReHzLUOkPiLMqqlj9_38bBKInaRzZ3XOc-jItp5Qya0KPOeby9LQ819O0VG-u61vp-Bzx9M8dVKIdUcJhOtx-NZ3p8Zg_CPQMdkQNgL3eXezwHsTaSw?width=256&height=195&cropmode=none"  type = "image/x-icon">  
+        <link rel = "icon" href = ""  type = "image/x-icon">  <!--Tab Icon Link-->
 </head>
+    
 <body>
     <header id="main-header">
         <div class="container">
             <h1>JetMeteor</h1>
         </div>
     </header>
-    <nav id="navbar">
+    <nav id="navbar">   <!--Navigation Bar-->
         <div class="container">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -27,7 +28,7 @@
     <div class="container">
         <p><b>If you want my website source code. If you encounter any bugs or any problems contact me on:</b></p>
     </div>
-    <form class="my-form">
+    <form class="my-form">  <!--Form by the way this form is not connected to database so input will not be saved-->
         <div class="form-group">
             <label>Name: </label>
             <input type="text" name="name">
@@ -40,9 +41,9 @@
             <label>Message: </label>
             <textarea name="message"></textarea>
         </div>
-        <input class="button" type="submit" value="submit">
+        <input class="button" type="submit" value="submit"> <!--Submit Button-->
     </form>
-    <footer id="contact-main-footer">
+    <footer id="contact-main-footer">   <!--Footer-->
         <p>Copyright &copy; 2020 JetMeteor</p>
     </footer>
 </body>
