Update New Text .html

--- a/New Text .html
+++ b/New Text .html
@@ -13,7 +13,7 @@
         <title>Coding</title>
 
         <!--Title icon-->
-        <link rel = "icon" href = "https://83yeig.dm.files.1drv.com/y4mvdHbBjz5REN0PlHDpU1864eYyQiu3g-fRjVbRyO_ULstdwR3Xh_TSIPpzIfosNLhhFRpiHYsDuJ6n7HetXggDekNlrAjkf61Ie3ReHzLUOkPiLMqqlj9_38bBKInaRzZ3XOc-jItp5Qya0KPOeby9LQ819O0VG-u61vp-Bzx9M8dVKIdUcJhOtx-NZ3p8Zg_CPQMdkQNgL3eXezwHsTaSw?width=256&height=195&cropmode=none"  type = "image/x-icon">  
+        <link rel = "icon" href = ""  type = "image/x-icon">  
 
     </head>
     <body class="Text-color">
@@ -28,7 +28,7 @@
         </div>
         <br><br><br><br><br>
         <div> <!--link no 1-->
-            <img src="https://pnyaig.dm.files.1drv.com/y4mZYwg-XxuwgaoxGZVuGJbFv5PpNKscd9lYQ21bAoynLN9ulu2DSPyHK1H0puv74qvPiyMCJQQ9IrFoaiJ8vWy76EFTwK1EJKsD9vs_IlHpgd-Ww_iQ8G3XekVS-FwRnh5nwz4fnmbErSurz9Y6icXdwatWqMRbcBI5wjRknApR1JMvwKlgADCIGfKWiYju1kFXE1xL334Ai8lfgWVrWsc2A?width=256&height=86&cropmode=none" width="256" height="144" alt="Dice_Rolling_Simulator" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
+            <img src="" width="256" height="144" alt="Dice_Rolling_Simulator" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
             <a href="pcode.html"><h2>Python 3<h2></a>
             <p></p>
             <br><br><br>
