--- a/Useful links.html
+++ b/Useful links.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <TITLE> Contact Us </TITLE>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"rel="stylesheet"/>
-        <link rel = "icon" href = "https://83yeig.dm.files.1drv.com/y4mvdHbBjz5REN0PlHDpU1864eYyQiu3g-fRjVbRyO_ULstdwR3Xh_TSIPpzIfosNLhhFRpiHYsDuJ6n7HetXggDekNlrAjkf61Ie3ReHzLUOkPiLMqqlj9_38bBKInaRzZ3XOc-jItp5Qya0KPOeby9LQ819O0VG-u61vp-Bzx9M8dVKIdUcJhOtx-NZ3p8Zg_CPQMdkQNgL3eXezwHsTaSw?width=256&height=195&cropmode=none"  type = "image/x-icon">  
+        <link rel = "icon" href = ""  type = "image/x-icon">    <!--Tab Icon-->  
 </head>
 <body>
     <header id="main-header">
@@ -26,37 +26,37 @@
     </nav>
     <div class="container">
         <div> <!--link no 1_Programiz-->
-            <img src="https://pnygig.dm.files.1drv.com/y4msAiPxt95Jrnp3_FsWDoMThuFit-SevppJoSj2ZkyqqfYSOUjnswjjqvk5a5aYYIfiSfJxiooqkiv1O_bC1LC_f48ww6UwY_eUc64EDwsJGXtcOFSyNoJGUXegB_O2pHXyE7oy-_ZDaKplMOnYZ0fTxKWi1O-qmk37s_ho3RzB12HroT0FoOEBdUlftBWL-f5AnzBVwP_ta4dHzCQDJsWeQ?width=256&height=140&cropmode=none" width="256" height="144" alt="Programiz" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
+            <img src="" width="256" height="144" alt="Programiz" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
             <a href="https://www.programiz.com/"><h2>Programiz Learn to code for free<h2></a>
             <p></p>
             <br><br><br>
         </div>
         <div> <!--link no 2_Khan Academy-->
-            <img src="https://pnyeig.dm.files.1drv.com/y4mCLpryKPKnv4CEHw5NxqIH1FF74rbidtjRIkASC_2FfX0veMJ931Li4sScpWy6tSypCmZR6KFfwrwElerc47rpUOTI-_DAx7wY173xPazsbQrTWPtQArM8Qb-TdqYyOmYI8XKE4s62hHYdE-qJAwcLfyZ4UKdW3Ufs1963t24sHs9yEE97RVHhsn4GzfoaoDO7sHGK0TPPX2OqFshOnOkSA?width=256&height=146&cropmode=none" width="256" height="144" alt="Khan Academy" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
+            <img src="" width="256" height="144" alt="Khan Academy" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
             <a href="https://www.khanacademy.org/"><h2>Khan Academy<h2></a>
             <p></p>
             <br><br><br>
         </div>
         <div> <!--link no 3_shaalaa-->
-            <img src="https://pnyfig.dm.files.1drv.com/y4mqwUklD_IjPWkrKoYVZBti4J7J3fEyvZ1dB6PD169qtoOKa0XUxavoAGXmc5yRNiz4bh7zuNa5TNWly5Ml4rOI4Ui9v20Di2q1CoFk8lkOYIZswGIpjIMt2UKGArJrywex4nMjSMbkDyMCX9SX0VTpi3cmJ2nOMwO5aG7tw6Mb9hETbXytM0GbwWKHVRgdHPTMvm7fopZko-M12LH1wlzvA?width=256&height=146&cropmode=none" width="256" height="144" alt="Shaalaa" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
+            <img src="" width="256" height="144" alt="Shaalaa" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
             <a href="https://www.shaalaa.com/"><h2>Shaalaa.com<h2></a>
             <p></p>
             <br><br><br>
         </div>
         <div> <!--link no 4_JetBrains-->
-            <img src="https://63x9ig.dm.files.1drv.com/y4mK3lc-Csn0A-1DNSOgaJnmhYI07XDtU-XYN_6jadNpvtlgU9E2z-3hY97Snsue6yhcOc9VqPzLI7HqR1ohyfZe3QlHMJ67_GJ2QcCFPEQSPRWFbBCy843N_MK5Rx9FPF10-gUOhRMapktdlNt3GaBqLKs4aRsEP3C3Ou9TPA3l-BUjTotLEG8-ZNQ0IHMekejUHRziNybhoPRz1UTM08y8A?width=256&height=137&cropmode=none" width="256" height="144" alt="JetBrains" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
+            <img src="" width="256" height="144" alt="JetBrains" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
             <a href="https://www.jetbrains.com/academy/"><h2>JetBrains<h2></a>
             <p></p>
             <br><br><br>
         </div>
         <div> <!--link no 5_Udemy-->
-            <img src="https://63xpig.dm.files.1drv.com/y4mzCIWiZNO7rCHUXriW7PK1SgBvlvW6Vq3Ldzy51pSCxt9WyCcVq_DXEFfvlrGWN3OmddL6MP6IpZkgDSZXMeDoPJV0TcU_lGwkqi3zjlXtj4bz3mkX40iYYTygOx2E7_ykHEa72R8FMsgEx797p-yokiDX9emNH53C55K9gg8TYES7-6VnzrOgjW8hB75G7M8Tvv1K4j2rG6QqSnu1T8Ijg?width=256&height=146&cropmode=none" width="256" height="144" alt="Udemy" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
+            <img src="" width="256" height="144" alt="Udemy" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
             <a href="https://www.udemy.com/?utm_source=adwords-brand&utm_medium=udemyads&utm_campaign=Brand-Udemy_la.EN_cc.INDIA&utm_term=_._ag_78279294239_._ad_387461093423_._de_c_._dm__._pl__._ti_kwd-310556426868_._li_9062269_._pd__._&utm_term=_._pd__._kw_udemy_._&matchtype=e&gclid=EAIaIQobChMIksq5lJKL6gIVWR0rCh3rTwOBEAAYASAAEgIpVvD_BwE"><h2>Udemy<h2></a>
             <p></p>
             <br><br><br>
         </div>
     </div>
-    <footer id="main-footer">
+    <footer id="main-footer">   <!--Footer-->
         <p>Copyright &copy; 2020 JetMeteor</p>
     </footer>
 </body>
