--- a/Contact.html
+++ b/Contact.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <TITLE> Contact Us </TITLE>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"rel="stylesheet"/>
-        <link rel = "icon" href = ""  type = "image/x-icon">  <!--Tab Icon Link-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <TITLE> Contact Us </TITLE>
+    <link href='https://fonts.googleapis.com/css?family=East Sea Dokdo' rel='stylesheet'>
+    <link rel="icon" href="./images/logo.png" type="image/x-icon">
+    <!--Tab Icon Link-->
 </head>
-    
+
 <body>
     <header id="main-header">
         <div class="container">
-            <h1>JetMeteor</h1>
+            <h1 class="headerText">JetMeteor</h1>
         </div>
     </header>
-    <nav id="navbar">   <!--Navigation Bar-->
+    <nav id="navbar">
+        <!--Navigation Bar-->
         <div class="container">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a class="active" href="Contact.html">Contact</a></li>
-                <li><a href="#">Services</a></li>
+
             </ul>
         </div>
     </nav>
-    <div class="container">
-        <p><b>If you want my website source code. If you encounter any bugs or any problems contact me on:</b></p>
+    <div class="container2">
+        <p><b>If you want my website source code. If you encounter any bugs or any problems contact me on: </b><a
+                href="mailto:  5kchqvw6r@relay.firefox.com"> 5kchqvw6r@relay.firefox.com</a></p>
     </div>
-    <form class="my-form">  <!--Form by the way this form is not connected to database so input will not be saved-->
+    <form class="my-form">
+        <!--Form by the way this form is not connected to database so input will not be saved-->
         <div class="form-group">
             <label>Name: </label>
             <input type="text" name="name">
@@ -41,10 +46,13 @@
             <label>Message: </label>
             <textarea name="message"></textarea>
         </div>
-        <input class="button" type="submit" value="submit"> <!--Submit Button-->
+        <input class="button" type="submit" value="submit">
+        <!--Submit Button-->
     </form>
-    <footer id="contact-main-footer">   <!--Footer-->
-        <p>Copyright &copy; 2020 JetMeteor</p>
+    <footer id="main-footer2">
+        <!--Footer-->
+        <p>This site is maintained by Pranav Dalvi</p>
     </footer>
 </body>
+
 </html>
