--- a/About.html
+++ b/About.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">    <!--Calling CSS-->
-        <meta charset="utf-8">  <!--optional-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--For mobile devices-->
-        <TITLE> About Us </TITLE>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"rel="stylesheet"/>   <!--Custom Font-->
-        <link rel = "icon" href = ""  type = "image/x-icon">    <!--Tab icon--> 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!--Calling CSS-->
+    <meta charset="utf-8">
+    <!--optional-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--For mobile devices-->
+    <TITLE> About Us </TITLE>
+    <link href='https://fonts.googleapis.com/css?family=East Sea Dokdo' rel='stylesheet'>
+    <!--Custom Font-->
+    <link rel="icon" href="./images/logo.png" type="image/x-icon">
+    <!--Tab icon-->
 </head>
+
 <body>
     <header id="main-header">
         <div class="container">
-            <h1>JetMeteor</h1>
+            <h1 class="headerText">JetMeteor</h1>
         </div>
     </header>
-    <nav id="navbar">   <!--navigation bar code-->
+    <nav id="navbar">
+        <!--navigation bar code-->
         <div class="container">
             <ul>
-                <li><a href="index.html">Home</a></li>  <!--different html pages are linked here e.g. index.html is linked to home button-->
+                <li><a href="index.html">Home</a></li>
+                <!--different html pages are linked here e.g. index.html is linked to home button-->
                 <li><a class="active" href="About.html">About</a></li>
                 <li><a href="Contact.html">Contact</a></li>
-                <li><a href="#">Services</a></li>
             </ul>
         </div>
     </nav>
     <div class="container">
-        <p><b>Ok there is nothing Us this site made by and maintained Pranav Dalvi aka JetMeteor. I made this site to understand the core concepts of HTML and CSS. If you found any bugs or problems help will be appreciated you can contact me more details on contact us tab </b></p>
-        
+        <img class="center" src="./images/logo.png" height="150" width="200" />
+        <p><b>Ok there is nothing Us this site made and maintained by Pranav Dalvi. I made this site to
+                understand the core concepts of HTML, CSS and JavaScript. If you found any bugs or problems help will be
+                appreciated more details on contact tab </b></p>
+
     </div>
-    <footer id="about-main-footer"> <!--Footer-->
-        <p>Copyright &copy; 2020 JetMeteor</p>
+    <footer id="main-footer2">
+        <!--Footer-->
+        <p>This site is maintained by Pranav Dalvi</p>
     </footer>
 </body>
+
 </html>
