--- a/Useful links.html
+++ b/Useful links.html
@@ -1,63 +1,85 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <TITLE> Contact Us </TITLE>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"rel="stylesheet"/>
-        <link rel = "icon" href = ""  type = "image/x-icon">    <!--Tab Icon-->  
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <TITLE>Useful Links</TITLE>
+    <link href='https://fonts.googleapis.com/css?family=East Sea Dokdo' rel='stylesheet'>
+    <link rel="icon" href="./images/logo.png" type="image/x-icon">
+    <!--Tab Icon-->
 </head>
+
 <body>
     <header id="main-header">
         <div class="container">
-            <h1>JetMeteor</h1>
+            <h1 class="headerText">JetMeteor</h1>
         </div>
     </header>
     <nav id="navbar">
         <div class="container">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="#">Services</a></li>
             </ul>
         </div>
     </nav>
     <div class="container">
-        <div> <!--link no 1_Programiz-->
-            <img src="" width="256" height="144" alt="Programiz" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
-            <a href="https://www.programiz.com/"><h2>Programiz Learn to code for free<h2></a>
+        <div>
+            <!--link no 1_Programiz-->
+            <img src="" width="256" height="144" alt="Programiz"
+                style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;" />
+            <a href="https://www.programiz.com/">
+                <h2>Programiz Learn to code for free<h2>
+            </a>
             <p></p>
             <br><br><br>
         </div>
-        <div> <!--link no 2_Khan Academy-->
-            <img src="" width="256" height="144" alt="Khan Academy" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
-            <a href="https://www.khanacademy.org/"><h2>Khan Academy<h2></a>
+        <div>
+            <!--link no 2_Khan Academy-->
+            <img src="" width="256" height="144" alt="Khan Academy"
+                style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;" />
+            <a href="https://www.khanacademy.org/">
+                <h2>Khan Academy<h2>
+            </a>
             <p></p>
             <br><br><br>
         </div>
-        <div> <!--link no 3_shaalaa-->
-            <img src="" width="256" height="144" alt="Shaalaa" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
-            <a href="https://www.shaalaa.com/"><h2>Shaalaa.com<h2></a>
+        <div>
+            <!--link no 3_shaalaa-->
+            <img src="" width="256" height="144" alt="Shaalaa"
+                style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;" />
+            <a href="https://www.shaalaa.com/">
+                <h2>Shaalaa.com<h2>
+            </a>
             <p></p>
             <br><br><br>
         </div>
-        <div> <!--link no 4_JetBrains-->
-            <img src="" width="256" height="144" alt="JetBrains" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
-            <a href="https://www.jetbrains.com/academy/"><h2>JetBrains<h2></a>
+        <div>
+            <!--link no 4_JetBrains-->
+            <img src="" width="256" height="144" alt="JetBrains"
+                style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;" />
+            <a href="https://www.jetbrains.com/academy/">
+                <h2>JetBrains<h2>
+            </a>
             <p></p>
             <br><br><br>
         </div>
-        <div> <!--link no 5_Udemy-->
-            <img src="" width="256" height="144" alt="Udemy" style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;"/>
-            <a href="https://www.udemy.com/?utm_source=adwords-brand&utm_medium=udemyads&utm_campaign=Brand-Udemy_la.EN_cc.INDIA&utm_term=_._ag_78279294239_._ad_387461093423_._de_c_._dm__._pl__._ti_kwd-310556426868_._li_9062269_._pd__._&utm_term=_._pd__._kw_udemy_._&matchtype=e&gclid=EAIaIQobChMIksq5lJKL6gIVWR0rCh3rTwOBEAAYASAAEgIpVvD_BwE"><h2>Udemy<h2></a>
+        <div>
+            <!--link no 5_Udemy-->
+            <img src="" width="256" height="144" alt="Udemy"
+                style="float:left; margin-right:10px; margin-bottom:5px; border:solid black 1px;padding: 2px;" />
+            <a
+                href="https://www.udemy.com/?utm_source=adwords-brand&utm_medium=udemyads&utm_campaign=Brand-Udemy_la.EN_cc.INDIA&utm_term=_._ag_78279294239_._ad_387461093423_._de_c_._dm__._pl__._ti_kwd-310556426868_._li_9062269_._pd__._&utm_term=_._pd__._kw_udemy_._&matchtype=e&gclid=EAIaIQobChMIksq5lJKL6gIVWR0rCh3rTwOBEAAYASAAEgIpVvD_BwE">
+                <h2>Udemy<h2>
+            </a>
             <p></p>
             <br><br><br>
         </div>
     </div>
-    <footer id="main-footer">   <!--Footer-->
-        <p>Copyright &copy; 2020 JetMeteor</p>
+    <footer id="main-footer">
+        <p>This site is maintained by Pranav Dalvi</p>
     </footer>
 </body>
+
 </html>
